--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,13 +5,13 @@
     <% if current_user != nil %>
       <%= link_to exams_path, method: "post" do %>
         <div id ="button-home" class="btn btn-primary btn-lg">
-          Test you sight!
+          Test your sight!
         </div>
       <% end %>
     <% else %>
       <%= link_to new_user_registration_path do %>
         <div id ="button-home" class="btn btn-primary btn-lg">
-          Test you sight!
+          Test your sight!
         </div>
       <% end %>
     <% end %>
@@ -20,7 +20,7 @@
 
 <div class="wrapper wrapper-grey">
   <div class="container">
-    <h2 class="text-center" style="color: #3F72AF; padding-bottom:27px;"><strong>How it works</strong></h2>
+    <h2 class="text-center" style="color: #3F72AF; padding-top:45px;"><strong>How it works</strong></h2>
     <div class="row">
       <div class="col-xs-12 col-md-3 text-center">
         <i class="fa fa-sign-in icon"></i>
