--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -5,7 +5,7 @@
   color: white;
   position: relative;
   max-width: 60vh;
-  background-color: rgba(63, 114, 175, 0.55);
+  background-color: #3F72AF;
   border-radius: 4px;
 }
 
