--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,11 @@
   padding: 30px 0;
 }
 
+.wrapper-grey-padding-top {
+  background: #DBE2EF;
+  padding-top: 20px
+}
+
 .icon {
 font-size: 50px;
 padding-top: 30px;
