--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,8 +17,14 @@
       <div class="col-xs-6"><%= f.input :password_confirmation, required: true, placeholder: "Password confirmation", label: false %></div>
     </div>
     <div class="row">
-      <div class="col-xs-6 flexbox"><div class="flex-item", style="color: #999999;">Date of birth:</div><div class="flex-item"><%= f.input :date_of_birth, :as => :date, :start_year => Date.today.year - 18,
-  :end_year => 1900, :order => [ :day, :month, :year], :required => true, label: false %></div></div>
+      <div class="col-xs-6 flexbox">
+        <div class="flex-item", style="color: #999999;">
+          Date of birth:
+        </div>
+      <div class="flex-item"><%= f.input :date_of_birth, :as => :date, :start_year => Date.today.year - 18,
+  :end_year => 1900, :order => [ :day, :month, :year], :required => true, label: false %>
+      </div>
+    </div>
       <div class="col-xs-6"><%= f.input :city, required: true, placeholder: "City", label: false %></div>
     </div>
   </div>
