--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -2,19 +2,25 @@
   <h1>The test is over. Please find your results hereafter.</h1>
   <div class="container" style="margin-top: 40px;">
     <div class="row">
-      <div class="col-xs-offset-3 col-xs-6">
-        <h3><strong>Total score</strong></h3>
-        <h3><%= @exam.score_total %> / 20</h3>
+      <div class="col-xs-offset-4 col-xs-4">
+        <div class="card-grey">
+          <h3><strong>Total score</strong></h3>
+          <h3><%= @exam.score_total %> / 20</h3>
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6">
-        <h3><strong>Left eye</strong></h3>
-        <h3><%= @exam.score_left %> / 10</h3>
+      <div class="col-xs-offset-2 col-xs-4">
+        <div class="card-grey">
+          <h3><strong>Left eye</strong></h3>
+          <h3><%= @exam.score_left %> / 10</h3>
+        </div>
       </div>
-      <div class="col-xs-6">
-        <h3><strong>Right score</strong></h3>
-        <h3><%= @exam.score_right %> / 10</h3>
+      <div class="col-xs-4">
+        <div class="card-grey">
+          <h3><strong>Right score</strong></h3>
+          <h3><%= @exam.score_right %> / 10</h3>
+        </div>
       </div>
     </div>
     <div class="row">
