--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -4,8 +4,10 @@
 // Google fonts
 
 @import url(https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic);
+@import url(https://fonts.googleapis.com/css?family=Handlee);
 $base-font: "Muli" ;
 $header-font: "Muli";
+$title-font: "Handlee";
 
 // Local fonts (uncomment following lines)
 // @font-face {
