--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,15 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "icon-glasses.png" %>
-  <% end %>
-
+  <div class="logo-name">
+    <div class="logo">
+      <%= link_to root_path, class: "navbar-wagon-brand" do %>
+        <%= image_tag "Logo_6.svg" %>
+      <% end %>
+    </div>
+    <div class="name">
+      <div style="color:white"><p><strong style="font-weight:400;">EasyGlasses</strong></p></div>
+    </div>
+  </div>
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
