--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -26,6 +26,17 @@
     <div class="row">
       <h2><strong> <%= @exam.recommendation %></strong></h2>
     </div>
-    <%= link_to "My profile", user_path(@exam.user_id), class: "btn btn-lg btn-primary" %>
+    <div class="row">
+      <div class="col-xs-6"><%= link_to "My profile", user_path(@exam.user_id), class: "btn btn-lg btn-primary" %></div>
+      <div class="col-xs-6">
+        <% if @exam.prescription == nil %>
+          <%= form_for [@exam, @prescription] do |f| %>
+            <%= f.submit "Request a prescription", class: "btn btn-lg btn-primary" %>
+          <% end %>
+        <% else %>
+          <div class="btn btn-lg btn-success" style="background-color: #60B65B !important; border-color: #60B65B !important;">Prescription requested</div>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
