--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -4,8 +4,8 @@
 // Google fonts
 
 @import url(https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic);
-$base-font: "Muli" ;
-$header-font: "Muli";
+$base-font: "Muli", "Arial", "Sans-serif" ;
+$header-font: "Muli", "Arial", "Sans-serif";
 
 // Local fonts (uncomment following lines)
 // @font-face {
