--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -1,5 +1,88 @@
 <%= simple_form_for @user, url: update_user_after_onboarding_path do |f| %>
-  <div id="step_2" class="wrapper wrapper-grey">
+<div id="step_2" class="wrapper wrapper-grey">
+  <div class="container container-min-height">
+    <div class="row">
+      <div class="col-xs-offset-1 col-xs-10">
+        <div class="text-center">
+          <i class= "fa fa-mobile onboarding-icon text-center"></i>
+        </div>
+        <div class="card-desktop-onboarding">
+          <div class="question text-center">
+            <div class="row">
+              <div class="col-xs-12">
+                <%= f.label :phone_number, "+33", value: "true"  %>
+                <%= f.text_field :phone_number, placeholder: "6 44 60 10 69", style: "margin: 20px 0px 13px 0px; padding-left: 8px" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-offset-1 col-xs-10">
+        <div class="text-center">
+          <i class= "fa fa-venus-mars onboarding-icon text-center"></i>
+        </div>
+        <div class="card-desktop-onboarding">
+          <div class="question text-center">
+            <div class="row">
+              <div class="col-xs-6">
+                <h4>Please enter your shoe size.</h4>
+                <%= f.number_field :shoe_size, step: 0.5 %>
+              </div>
+              <div class="col-xs-6">
+                <h4>Please enter your gender.</h4>
+                <%= f.input :gender, collection: ["Male", "Female"], label: false %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-offset-1 col-xs-10">
+        <div class="text-center">
+          <i class= "fa fa-eye onboarding-icon text-center"></i>
+        </div>
+        <div class="card-desktop-onboarding">
+          <div class="question text-center">
+            <div class="row">
+              <div class="col-xs-6">
+                <h4>Please enter what you have on right now.</h4>
+                <%= f.input :wearing_on_now, label: false, collection: ["Glasses", "Contact lens", "Neither"] %>
+              </div>
+              <div class="col-xs-6">
+                <h4>Please enter what you ever worn?</h4>
+                <%= f.input :worn_in_past, label: false, collection: ["Glasses", "Contact lens", "Both", "Neither"] %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row next-previous-buttons">
+      <div class="col-xs-12 col-md-offset-3 col-md-6 text-center">
+        <div id="next_2" class="btn btn-primary btn-lg" style="margin-top: -15px">Next</div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div id="step_3" class="hidden">
+   <div class="banner-start-test" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3)), url(<%= image_url 'start_the_test.jpg' %>); background-position: center center;">
+    <div class="onboarding-banner-content">
+      <h1>We will now send you an SMS on your smartphone: <br> follow the instructions carefully, the test should take 5 minutes.</h1>
+      <div><%= f.input :exam_id, as: :hidden, input_html: { value: params[:id] } %></div>
+      <div style="margin-top: 80px"><%= f.submit "Start the test now!", class: "btn btn-primary btn-lg" %></div>
+    </div>
+   </div>
+</div>
+
+<div id="step_8" class="wrapper wrapper-grey hidden">
     <div class="container container-min-height">
       <h2 class="text-center onboarding-h2">What you need to take the EasyGlasses test</h2>
       <div class="row">
@@ -22,36 +105,13 @@
           </div>
         </div>
       </div>
-      <h2 class="text-center onboarding-h2">How it works</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-4 text-center">
-          <div class="onboarding-card">
-            <h3>Step 1</h3>
-            <p>We'll walk you through setting up your room and devices correctly.</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <div class="onboarding-card">
-            <h3>Step 2</h3>
-            <p>You'll take our 5 minute exam using your Android or iPhone as a remote control for your computer.</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <div class="onboarding-card">
-            <h3>Step 3</h3>
-            <p>After the exam, you'll be able know if you need glasses and if you should go to a doctor to further test your view.</p>
-          </div>
-        </div>
-      </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-offset-6 col-md-6 text-center">
           <div id="next_2" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div id="step_3" class="wrapper wrapper-grey hidden">
     <div class="container container-min-height">
       <h2 class="text-center">Computer and room set up</h2>
       <div class="row">
