--- a/app/views/exams/mobile_questions.html.erb
+++ b/app/views/exams/mobile_questions.html.erb
@@ -10,26 +10,26 @@
     <p style="font-size: 20px; margin-bottom: 30px">Select the object you see.</p>
     <div class="flexbox">
       <div class="flex-item">
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 4), method: :post, class: "mobile-button flexbox" do %>
+        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 4), method: :post, class: "mobile-button" do %>
           <div style="transform: rotate(0deg)">
             E
           </div>
         <% end %>
       </div>
       <div class="flex-item vertical-items">
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 1), method: :post, class: "mobile-button flexbox" do %>
+        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 1), method: :post, class: "mobile-button" do %>
           <div style="transform: rotate(90deg)">
             E
           </div>
         <% end %>
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 3), method: :post, class: "mobile-button flexbox" do %>
+        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 3), method: :post, class: "mobile-button" do %>
           <div style="transform: rotate(270deg)">
             E
           </div>
         <% end %>
       </div>
       <div class="flex-item">
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 2), method: :post, class: "mobile-button flexbox" do %>
+        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 2), method: :post, class: "mobile-button" do %>
           <div style="transform: rotate(180deg)">
             E
           </div>
