--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,22 +60,34 @@
     </div>
   </div>
 </div>
+
 <div class="wrapper-grey">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="card-doctor">
-          <div class="card-doctor-image" style="background-image: url(<%= image_url("Boris-Paillard.jpg") %>);">
-
+          <div class="card-doctor-image" style="background-image: url(<%= image_url("Boris-Paillard.jpg") %>);"></div>
+          <div class="card-doctor-footer text-center">
+            <p><strong>Dr. Boris Paillard</strong></p>
           </div>
-          <div class="card-doctor-footer">
-            <p>Dr. Boris Paillard</p>
-            <div class="crd-doctor-footer-description">
-
-            </div>
+          <div class="doctor-description">
+            <p>Dr. Paillard is a board-certified ophthalmologist with extensive expertise in refractions, cataracts, laser surgery, and glaucoma. He graduated from Paris Medical School and completed his ophthalmology residency at the University of Harvard.</p>
+          </div>
+          </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="card-doctor">
+          <div class="card-doctor-image" style="background-image: url(<%= image_url("romain_paillard.jpg") %>);"></div>
+          <div class="card-doctor-footer text-center">
+            <p><strong>Dr. Romain Paillard</strong></p>
+          </div>
+          <div class="doctor-description">
+            <p>Dr. Paillard is a board-certified ophthalmologist. He has extensive experience in refractions, laser surgery, and glaucoma. He attended University of Paris Medical School, followed by a fellowship in glaucoma at University of California San Diego.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
