--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -102,14 +102,23 @@ padding-top: 30px;
   box-shadow: 1px 1px 2px #B3B3B3;
   background-color: white;
   width:350px;
-  height:350px;
+  height:500px;
   position: relative;
-  margin-bottom: 20px;
 }
 
 .card-doctor-image {
-  width:100px;
-  height:100px;
+  background-size: cover !important;
   background-position: center center;
+  height:300px;
 }
+
+.card-doctor-footer p {
+  margin-top: 10px;
+}
+
+.doctor-description {
+  margin-left: 5px;
+}
+
+
 
