--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -102,6 +102,7 @@ padding-top: 30px;
   width:350px;
   height:500px;
   position: relative;
+  margin:auto;
 }
 
 .card-doctor-image {
@@ -118,5 +119,20 @@ padding-top: 30px;
   margin-left: 5px;
 }
 
+#prescriptions-description {
+  margin-bottom: 30px;
+}
 
+.card-doctor-footer .fa-star {
+    font-size: 1em;
+    border: none;
+    color:#EFAD1D;
+}
 
+.card-doctor-footer .list-inline {
+    margin-bottom: 0px;
+}
+
+#doctor-name {
+  margin-bottom: 3px;
+}
