--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,7 +48,7 @@
   <div class="container text-center">
     <div class="wrapper-blue-container">
       <h2>Prescriptions from the Comfort of Home</h2>
-      <p>Opternative is the most convenient way to get your glasses or contacts prescription. The exam is free to take, only pay for your prescription</p>
+      <p>EasyGlasses is the most convenient way to get your glasses or contacts prescription. The exam is free to take, only pay for your prescription</p>
       <% if current_user != nil %>
         <%= link_to "Test your sight!", exams_path, class: " navbar-wagon-button bandeau" %>
       <% else %>
@@ -63,26 +63,62 @@
 
 <div class="wrapper-grey">
   <div class="container">
+  <h2 class="text-center" style="color:#3F72AF"><strong>Meet some of our Doctors</strong></h2>
+  <p id="prescriptions-description" class="text-center">Every prescription is signed by a board-certified ophthalmologist.</p>
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="card-doctor">
           <div class="card-doctor-image" style="background-image: url(<%= image_url("Boris-Paillard.jpg") %>);"></div>
           <div class="card-doctor-footer text-center">
-            <p><strong>Dr. Boris Paillard</strong></p>
+            <p id="doctor-name"><strong>Dr. Boris Paillard</strong></p>
+            <ul class="list-inline">
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+            </ul>
           </div>
           <div class="doctor-description">
-            <p>Dr. Paillard is a board-certified ophthalmologist with extensive expertise in refractions, cataracts, laser surgery, and glaucoma. He graduated from Paris Medical School and completed his ophthalmology residency at the University of Harvard.</p>
+            <p style="padding-left: 7px;">Dr. Paillard is a board-certified ophthalmologist with extensive expertise in refractions, cataracts, laser surgery, and glaucoma. He graduated from Paris Medical School and completed his ophthalmology residency at the University of Illinois.</p>
           </div>
-          </div>
+        </div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="card-doctor">
           <div class="card-doctor-image" style="background-image: url(<%= image_url("romain_paillard.jpg") %>);"></div>
           <div class="card-doctor-footer text-center">
-            <p><strong>Dr. Romain Paillard</strong></p>
+            <p id="doctor-name"><strong>Dr. Romain Paillard</strong></p>
+            <ul class="list-inline">
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+              <li>
+                <i class="fa fa-star"></i>
+              </li>
+            </ul>
           </div>
           <div class="doctor-description">
-            <p>Dr. Paillard is a board-certified ophthalmologist. He has extensive experience in refractions, laser surgery, and glaucoma. He attended University of Paris Medical School, followed by a fellowship in glaucoma at University of California San Diego.</p>
+            <p style="padding-left: 7px;">Dr. Paillard is a board-certified ophthalmologist. He has extensive experience in refractions, laser surgery, and glaucoma. He attended University of Paris Medical School, and a fellowship in glaucoma at University of California.</p>
           </div>
         </div>
       </div>
