--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -9,20 +9,22 @@
         </div>
       </div>
     </div>
-    <div class="row">
+
+    <div class="row btm-marged">
       <div class="col-xs-offset-2 col-xs-4">
         <div class="card-grey">
-          <h3><strong>Left eye</strong></h3>
+          <h3><strong>Left eye score</strong></h3>
           <h3><%= @exam.score_left %> / 10</h3>
         </div>
       </div>
       <div class="col-xs-4">
         <div class="card-grey">
-          <h3><strong>Right score</strong></h3>
+          <h3><strong>Right eye score</strong></h3>
           <h3><%= @exam.score_right %> / 10</h3>
         </div>
       </div>
     </div>
+
     <div class="row">
       <h2><strong> <%= @exam.recommendation %></strong></h2>
     </div>
