--- a/app/assets/stylesheets/pages/_desktop.scss
+++ b/app/assets/stylesheets/pages/_desktop.scss
@@ -14,4 +14,44 @@
   background: #3F72AF;
   color: white;
   padding: 5px;
+  margin-bottom: 30px;
+}
+
+.total-score {
+  font-size: 25px;
+  background: white;
+  height: 130px;
+  width: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  border: 4px solid #DBE2EF;
+  margin-top: -75px;
+}
+
+.card-result {
+  background-color: white;
+  padding: 25px;
+  padding-top: 72px;
+  border-radius: 4px;
+  margin-bottom: 25px;
+}
+
+.left-right-eye {
+  background-color: #DBE2EF;
+  border-radius: 50%;
+  height: 35vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  p {
+    font-size: 25px;
+  }
+}
+
+.icon-size {
+  font-size: 100px;
+  color: #3F72AF;
 }
