--- a/app/assets/stylesheets/pages/_onboarding.scss
+++ b/app/assets/stylesheets/pages/_onboarding.scss
@@ -1,6 +1,5 @@
 .onboarding-banner-content {
-  margin-bottom: 350px;
-  padding: 110px;
+  margin-bottom: 20%;
 }
 
 .banner-start-test {
@@ -15,7 +14,6 @@
 
 .onboarding-icon {
   font-size: 100px;
-  transform: translateY(50%);
   background: white;
   height: 130px;
   width: 130px;
