--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -3,7 +3,7 @@
   <div class="container container-min-height">
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
-        <div class="text-center">
+        <div class="text-center", style="transform: translateY(50%);">
           <i class= "fa fa-mobile onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding">
@@ -21,7 +21,7 @@
 
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
-        <div class="text-center">
+        <div class="text-center", style="transform: translateY(50%)">
           <i class= "fa fa-venus-mars onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding">
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
-        <div class="text-center">
+        <div class="text-center", style="transform: translateY(50%)">
           <i class= "fa fa-eye onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding">
@@ -77,231 +77,11 @@
     <div class="onboarding-banner-content">
       <h1>We will now send you an SMS on your smartphone: <br> follow the instructions carefully, the test should take 5 minutes.</h1>
       <div><%= f.input :exam_id, as: :hidden, input_html: { value: params[:id] } %></div>
-      <div style="margin-top: 80px"><%= f.submit "Start the test now!", class: "btn btn-primary btn-lg" %></div>
+      <div style="margin-top: 7%"><%= f.submit "Start the test now!", class: "btn btn-primary btn-lg" %></div>
     </div>
    </div>
 </div>
 
-<div id="step_8" class="wrapper wrapper-grey hidden">
-    <div class="container container-min-height">
-      <h2 class="text-center onboarding-h2">What you need to take the EasyGlasses test</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-4 text-center">
-          <div class="onboarding-card">
-            <h3>5 minutes</h3>
-            <i class="fa fa-clock-o onboarding-icon"></i>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <div class="onboarding-card">
-            <h3>A smartphone</h3>
-            <i class="fa fa-mobile onboarding-icon"></i>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <div class="onboarding-card">
-            <h3>3,5 meters</h3>
-            <i class="fa fa-home onboarding-icon"></i>
-          </div>
-        </div>
-      </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-offset-6 col-md-6 text-center">
-          <div id="next_2" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container container-min-height">
-      <h2 class="text-center">Computer and room set up</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-8">
-          <h3>Turn up your computer volume</h3>
-          <p>You will receive audio instructions from your computer throughout the exam. Make sure your computer audio is loud enough to hear from 3 meters away.</p>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <i class="fa fa-volume-up onboarding-icon" style="padding-top: 10px;"></i>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-md-8">
-          <h3>Make your room as dark as possible</h3>
-          <p>Close your window blinds and turn off or dim your lights in your room to avoid glare.</p>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <i class="fa fa-moon-o onboarding-icon"></i>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-md-8">
-          <h3>Set up your screen</h3>
-          <p>Turn up your screen brightness and turn off your screensaver or any power-saving features to avoid disruptions during the exam. Move your screen within 50 cm from the edge of your desk.</p>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <i class="fa fa-sun-o onboarding-icon" style="padding-top: 10px;"></i>
-        </div>
-      </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_3" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_3" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="step_4" class="wrapper wrapper-grey hidden">
-    <div class="container container-min-height">
-      <h2 class="text-center onboarding-h2">Connect your smartphone to WiFi</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-8">
-          <p>Your phone is used to answer questions during the exam. A reliable WiFi connection will ensure a smooth exam experience.</p>
-          <br>
-          <%= f.label :phone_number %>
-          <br>
-          <%= f.label :phone_number, "+33", value: "true"  %>
-          <%= f.text_field :phone_number, placeholder: "6 44 60 10 69" %>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <i class="fa fa-mobile" style="font-size: 200px;"></i>
-        </div>
-      </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_4" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_4" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="step_5" class="wrapper wrapper-grey hidden">
-    <div class="container container-min-height">
-      <h2 class="text-center onboarding-h2">Remove your shoes</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-6">
-          <p>Portions of the exam will be taken 3 meters from your computer screen. We will provide you with instructions to measure 3 meters with your shoes off.</p>
-          <br>
-          <%= f.label :shoe_size %>
-          <br>
-          <%= f.number_field :shoe_size, step: 0.5 %>
-          <br>
-          <br>
-          <%= f.input :gender, collection: ["Male", "Female"] %>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <%= image_tag "10ftaway.png" %>
-        </div>
-      </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_5" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_5" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="step_6" class="wrapper wrapper-grey hidden">
-    <div class="container container-min-height">
-      <h2 class="text-center onboarding-h2">Final basic information</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-8">
-          <p>Your vision information will help customize your exam and help our doctors provide you with the most accurate prescription. After answering these final questions, we'll be ready to begin your exam.</p>
-          <br>
-          <p>What do you have on right now?</p>
-          <%= f.input :wearing_on_now, label: false, collection: ["Glasses", "Contact lens", "Neither"] %>
-          <p>What have you ever worn in the past?</p>
-          <%= f.input :worn_in_past, label: false, collection: ["Glasses", "Contact lens", "Both", "Neither"] %>
-        </div>
-        <div class="col-xs-12 col-md-4 text-center">
-          <i class="fa fa-file-text-o" style="font-size: 150px;"></i>
-        </div>
-      </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_6" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_6" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="step_7" class="wrapper wrapper-grey hidden">
-    <div class="container container-min-height">
-      <h2 class="text-center onboarding-h2">Calibrate your computer screen</h2>
-      <p>This step will ensure that all images are displayed at the precise size for accurate results.</p>
-      <br>
-      <div class="row row-min-height">
-        <div class="col-xs-12 col-md-4">
-          <ol>
-            <li>
-              Take out a credit or debit card. Place it directly against the card on your screen, so that it lays flat.
-            </li>
-            <br>
-            <li>
-              Click and drag the resize button so that the card on the screen matches the size of the actual card you’ve placed against the screen.
-            </li>
-            <br>
-            <li>
-              When both cards match in size, click “Continue”.
-            </li>
-          </ol>
-        </div>
-        <div class="col-xs-12 col-md-8">
-          <div id="relative">
-          <%= image_tag "credit_card_front.png", class: "box" %>
-<!--             <div id="absolute" class="small-box"></div> -->
-          </div>
-        </div>
-      </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_7" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_7" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="step_8" class="wrapper wrapper-grey hidden">
-    <div class="container container-min-height">
-      <h2 class="text-center onboarding-h2">Congratulations! Setup complete.</h2>
-        <div class="row">
-          <div class="col-xs-12 col-md-8">
-            <p>We sent you a text. Check your phone and click the link in the text message to start your exam.</p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p>If you did not receive a text message click here.</p>
-          </div>
-          <div class="col-xs-12 col-md-4 text-center">
-            <i class="fa fa-mobile" style="font-size: 200px;"></i>
-          </div>
-        </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_8" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
-          <div><%= f.input :exam_id, as: :hidden, input_html: { value: params[:id] } %></div>
-          <div><%= f.submit "Submit", class: "btn btn-primary btn-lg" %></div>
-        </div>
-      </div>
-    </div>
-  </div>
 <% end %>
 
 <% content_for(:after_js) do %>
