--- a/app/views/exams/desktop_onboarding_eligible.html.erb
+++ b/app/views/exams/desktop_onboarding_eligible.html.erb
@@ -3,7 +3,7 @@
     <div class="container container-min-height">
       <div class="row">
         <div class="col-xs-offset-1 col-xs-10">
-          <div class="text-center">
+          <div class="text-center", style="transform: translateY(50%);">
             <i class= "fa fa-check-square onboarding-icon text-center"></i>
           </div>
           <div class="card-eligible">
