--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -1,42 +1,53 @@
-<div class="wrapper wrapper-grey text-center" id="wrapper_desktop_results">
-  <h1>The test is over. Please find your results hereafter.</h1>
+<div class="wrapper wrapper-grey" id="wrapper_desktop_results">
+  <h1 class="text-center", style="margin-top: 10px">The test is over. Please find your results hereafter.</h1>
   <div class="container" style="margin-top: 40px;">
     <div class="row">
-      <div class="col-xs-offset-4 col-xs-4">
-        <div class="card-grey">
-          <h3><strong>Total score</strong></h3>
-          <h3><%= @exam.score_total %> / 20</h3>
+      <div class="col-xs-offset-2 col-xs-8">
+        <div class="text-center", style="transform: translateY(50%);">
+          <p class="total-score"><strong>Total score</strong> <br> <%= @exam.score_total %> / 20</p>
+        </div>
+        <div class="card-result">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="left-right-eye">
+                <p><strong>Left eye</strong></p>
+                <p><%= @exam.score_left %> / 10</p>
+                <% if @exam.score_left > 4 %>
+                  <i class="fa fa-thumbs-o-up icon-size"></i>
+                <% else %>
+                  <i class="fa fa-thumbs-o-down icon-size"></i>
+                <% end %>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="left-right-eye">
+                <p><strong>Right eye</strong></p>
+                <p><%= @exam.score_right %> / 10</p>
+                <% if @exam.score_right > 4 %>
+                  <i class="fa fa-thumbs-o-up icon-size"></i>
+                <% else %>
+                  <i class="fa fa-thumbs-o-down icon-size"></i>
+                <% end %>
+              </div>
+            </div>
+          </div>
+      <h2 class="text-center", style="margin: 15px"><%= @exam.recommendation %></h2>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-offset-2 col-xs-4">
-        <div class="card-grey">
-          <h3><strong>Left eye</strong></h3>
-          <h3><%= @exam.score_left %> / 10</h3>
-        </div>
       </div>
-      <div class="col-xs-4">
-        <div class="card-grey">
-          <h3><strong>Right score</strong></h3>
-          <h3><%= @exam.score_right %> / 10</h3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <h2><strong> <%= @exam.recommendation %></strong></h2>
-    </div>
-    <div class="row">
-      <div class="col-xs-6"><%= link_to "My profile", user_path(@exam.user_id), class: "btn btn-lg btn-primary" %></div>
-      <div class="col-xs-6">
-        <% if @exam.prescription == nil %>
-          <%= form_for [@exam, @prescription] do |f| %>
-            <%= f.submit "Request a prescription", class: "btn btn-lg btn-primary" %>
+      <div class="row">
+      <div class="col-xs-offset-2 col-xs-8">
+        <div class="col-xs-6 text-center"><%= link_to "My profile", user_path(@exam.user_id), class: "btn btn-lg btn-primary" %></div>
+        <div class="col-xs-6 text-center">
+          <% if @exam.prescription == nil %>
+            <%= form_for [@exam, @prescription] do |f| %>
+              <%= f.submit "Request a prescription", class: "btn btn-lg btn-primary" %>
+            <% end %>
+          <% else %>
+            <div class="btn btn-lg btn-success" style="background-color: #60B65B !important; border-color: #60B65B !important">Prescription requested</div>
           <% end %>
-        <% else %>
-          <div class="btn btn-lg btn-success" style="background-color: #60B65B !important; border-color: #60B65B !important;">Prescription requested</div>
-        <% end %>
+        </div>
+        </div>
       </div>
-    </div>
   </div>
 </div>
