--- a/app/assets/stylesheets/pages/_desktop.scss
+++ b/app/assets/stylesheets/pages/_desktop.scss
@@ -55,3 +55,9 @@
   font-size: 100px;
   color: #3F72AF;
 }
+
+.flexbox-desktop-questions {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
