--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -38,21 +38,21 @@
     <div class="row">
       <div class="col-xs-offset-2 col-xs-8">
         <div class="col-xs-6 text-center"><%= link_to "My profile", user_path(@exam.user_id), class: "btn btn-lg btn-primary" %></div>
-        <div class="col-xs-6 text-center">
+        <div class="col-xs-6 text-center" id="prescription_status">
           <% if @exam.prescription %>
               <% if @exam.prescription.status == "Pending" %>
                 <% if current_user.ophtalmo == false %>
-                  <div class="btn btn-lg btn-success" style="background-color: orange !important; border-color: orange !important;">Prescription pending</div>
+                  <div class="btn-lg-orange">Prescription pending</div>
                 <% else %>
-                  <%= form_for [@exam, @exam.prescription] do |f| %>
+                  <%= form_for([@exam, @exam.prescription], remote: true) do |f| %>
                     <%= f.submit "Send prescription", class: "btn btn-lg btn-primary" %>
                   <% end %>
                 <% end %>
               <% elsif @exam.prescription.status == "Sent" %>
-                <div class="btn btn-lg btn-success" style="background-color: #60B65B !important; border-color: #60B65B !important;">Prescription sent</div>
+                <div class="btn-lg-green">Prescription sent</div>
               <% end %>
           <% else %>
-            <%= form_for [@exam, @prescription] do |f| %>
+            <%= form_for([@exam, @prescription], remote: true) do |f| %>
               <%= f.submit "Request a prescription", class: "btn btn-lg btn-primary" %>
             <% end %>
           <% end %>
