--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <h4>Name: <%= @user.first_name %> <%= @user.last_name %> </h4>
-          <h4>DOB: <%= @user.date_of_birth %> </h4>
+          <h4>Date of birth: <%= @user.date_of_birth.strftime("%d/%m/%Y") %> </h4>
           <h4>City: <%= @user.city %> </h4>
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -26,7 +26,12 @@
         <div class="col-xs-12 col-sm-6 col-md-8">
           <div class="scroll_fix">
           <h3><strong>Your record history</strong></h3>
-          <% vision_test_number = 1 %>
+          <% if current_user.patient_exams.count == 0 %>
+            <br>
+            <p>You haven't taken any test yet!</p>
+            <br>
+          <% else %>
+            <% vision_test_number = 1 %>
             <% current_user.patient_exams.each do |exam| %>
               <div class="row">
                 <div class="col-xs-12 col-sm-6">
@@ -39,7 +44,7 @@
                       <p>Right eye: <%= exam.score_right %></p>
                     </div>
                     <div class="test_date">
-                      <p>Test date: <%= exam.exam_date %></p>
+                      <p>Test date: <%= exam.exam_date.strftime("%d/%m/%Y") %></p>
                     </div>
                     <%= link_to "", desktop_results_exam_path(exam), class: "card-link" %>
                   </div>
@@ -64,6 +69,7 @@
               </div>
               <hr>
             <% end %>
+          <% end %>
           </div>
         </div>
 
@@ -79,7 +85,7 @@
             <% end %>
           </div>
 
-          <div class="row">
+          <div class="row" style="margin-bottom: 20px;">
             <% if !@user.review.nil? %>
             <h3><strong>Your feedback</strong></h3>
             <div class="card fixed-item hidden" id="review_card">
@@ -129,7 +135,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <h4>Name: <%= @user.first_name %> <%= @user.last_name %> </h4>
-          <h4>DOB: <%= @user.date_of_birth %> </h4>
+          <h4>Date of birth: <%= @user.date_of_birth.strftime("%d/%m/%Y") %> </h4>
         </div>
         <div class="col-xs-12 col-sm-6">
           <h4>Email: <%= @user.email %> </h4>
@@ -140,7 +146,7 @@
     </div>
     <hr>
 
-    <div class="container">
+    <div class="container container-min-height-ophtalmo">
       <div class="row">
         <div class="col-xs-12">
           <% @user.ophtalmo_exams.each do |exam| %>
@@ -154,7 +160,7 @@
                     <p>Right eye: <%= exam.score_right %></p>
                   </div>
                   <div class="test_date">
-                    <p>Test date: <%= exam.exam_date %></p>
+                    <p>Test date: <%= exam.exam_date.strftime("%d/%m/%Y") %></p>
                   </div>
                   <%= link_to "", desktop_results_exam_path(exam), class: "card-link" %>
                 </div>
