--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,7 +43,11 @@
     <% else %>
 
       <!-- Login text link -->
-     <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <button type="button" class="btn btn-primary navbar-wagon-item navbar-wagon-link" data-toggle="modal" data-target="#myModal">
+      Login
+      </button>
+      <%= render "log_in/log_in_modal" %>
+     <!-- link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %> -->
 
 
     <% end %>
