--- a/app/views/prescriptions/update.js.erb
+++ b/app/views/prescriptions/update.js.erb
@@ -1,1 +1,5 @@
 $('#prescription_status').html('<div class="btn-lg-green">Prescription sent</div>');
+
+$('#submit-btn-modal').click(function(event){
+  $('#myModal').modal('hide');
+});
