--- a/app/assets/stylesheets/pages/_mobile.scss
+++ b/app/assets/stylesheets/pages/_mobile.scss
@@ -26,9 +26,27 @@
 }
 
 .mobile-picture {
-  width: 70vw;
-  height: 55vh;
+  height:100vh;
+  width:100vw;
+  background-size: cover !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  p {
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+  }
 }
+
+.first-slide {
+  background-position: center center;
+}
+
+
+
+
 
 .wrapper-mobile-grey {
   background: #DBE2EF;
